--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "learn programming by doing",
   "main": "index.js",
   "scripts": {
+    "start":"nodemon app.js",
     "test": "mocha"
   },
   "keywords": [
