--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-tar": "^1.9.0",
     "gulp-util": "^3.0.7",
     "jquery": "^3.1.1",
+    "mocha": "^3.2.0",
     "run-sequence": "^1.2.2",
     "sequelize-auto": "^0.4.21",
     "should": "^11.1.2",
@@ -38,10 +39,12 @@
     "webpack-stream": "^3.2.0"
   },
   "dependencies": {
+    "body-parser": "^1.17.1",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
     "hbs": "^4.0.1",
     "lodash": "^4.17.2",
+    "md5": "^2.2.1",
     "mysql": "^2.13.0",
     "sequelize": "^3.30.2"
   }
