--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "hbs": "^4.0.1",
     "lodash": "^4.17.2",
     "md5": "^2.2.1",
+    "mongodb": "^2.2.25",
+    "mongoose": "^4.9.3",
     "mysql": "^2.13.0",
     "sequelize": "^3.30.2"
   }
