--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
   },
   "dependencies": {
     "body-parser": "^1.17.1",
+    "connect-mongo": "^1.3.2",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.2",
     "hbs": "^4.0.1",
-    "lodash": "^4.17.2",
+    "lodash": "^4.17.4",
     "md5": "^2.2.1",
     "mongodb": "^2.2.25",
     "mongoose": "^4.9.3",
