--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "webpack-stream": "^3.2.0"
   },
   "dependencies": {
+    "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "connect-mongo": "^1.3.2",
     "express": "^4.14.0",
