--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "description": "learn programming by doing",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
-    "client": "cd src\\client && npm run dev",
-    "server": "nodemon app.js --watch src\\server",
-    "test": "mocha",
-    "build": "cd src\\client && npm run build"
+    "start": "node index.js",
+    "dev": "nodemon index.js --watch src\\server",
+    "test": "mocha"
   },
   "keywords": [
     "learn",
