--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "eslint-config-google": "^0.7.1",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
+    "gulp-eslint": "^3.0.1",
     "gulp-gzip": "^1.4.0",
     "gulp-load-plugins": "^1.4.0",
+    "gulp-nodemon": "^2.2.1",
     "gulp-rev": "^7.1.2",
     "gulp-rev-collector": "^1.0.5",
+    "gulp-sass": "^3.1.0",
     "gulp-tar": "^1.9.0",
     "gulp-util": "^3.0.7",
     "jquery": "^3.1.1",
@@ -40,6 +43,7 @@
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "connect-mongo": "^1.3.2",
+    "debug": "^2.6.6",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.2",
