--- a/package.json
+++ b/package.json
@@ -20,34 +20,25 @@
     "eslint": "^3.12.2",
     "eslint-config-google": "^0.7.1",
     "gulp": "^3.9.1",
-    "gulp-clean": "^0.3.2",
     "gulp-eslint": "^3.0.1",
-    "gulp-gzip": "^1.4.0",
     "gulp-load-plugins": "^1.4.0",
     "gulp-nodemon": "^2.2.1",
-    "gulp-rev": "^7.1.2",
-    "gulp-rev-collector": "^1.0.5",
     "gulp-sass": "^3.1.0",
-    "gulp-tar": "^1.9.0",
     "gulp-util": "^3.0.7",
     "jquery": "^3.1.1",
     "mocha": "^3.2.0",
-    "run-sequence": "^1.2.2",
     "sequelize-auto": "^0.4.21",
     "should": "^11.1.2",
-    "supertest": "^2.0.1",
-    "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.16.2",
-    "webpack-stream": "^3.2.0"
+    "supertest": "^2.0.1"
   },
   "dependencies": {
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "connect-mongo": "^1.3.2",
-    "debug": "^2.6.6",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.2",
+    "gulp-uglify": "^2.1.2",
     "hbs": "^4.0.1",
     "lodash": "^4.17.4",
     "md5": "^2.2.1",
