--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "eslint": "^3.12.2",
     "eslint-config-google": "^0.7.1",
+    "babel-preset-es2015": "^6.3.13",
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1",
     "gulp-uglify": "^2.1.2",
@@ -39,6 +40,7 @@
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.2",
+    "gulp-babel": "^6.1.2",
     "hbs": "^4.0.1",
     "lodash": "^4.17.4",
     "md5": "^2.2.1",
