--- a/package.json
+++ b/package.json
@@ -17,15 +17,17 @@
   "author": "xuzhengwei.amor@gmail.com",
   "license": "MIT",
   "devDependencies": {
+    "babel-preset-es2015": "^6.3.13",
     "eslint": "^3.12.2",
     "eslint-config-google": "^0.7.1",
-    "babel-preset-es2015": "^6.3.13",
     "gulp": "^3.9.1",
+    "gulp-clean-css": "^3.0.4",
     "gulp-eslint": "^3.0.1",
-    "gulp-uglify": "^2.1.2",
     "gulp-load-plugins": "^1.4.0",
     "gulp-nodemon": "^2.2.1",
     "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.0",
+    "gulp-uglify": "^2.1.2",
     "gulp-util": "^3.0.7",
     "jquery": "^3.1.1",
     "mocha": "^3.2.0",
