--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
     "one-var": "off",
     "space-before-function-paren": "off",
     "comma-dangle": "off",
-    "require-jsdoc": "off"
+    "require-jsdoc": "off",
+    "linebreak-style":"off"
   }
 }
